# Quick-Start-Substrate

./: .gitignore  README.md  README_zh_CN.md
app/: README.md  balance.js  chain.js  game.js  package-lock.json  transfer.js
en/: Lesson 0.md  Lesson 1.md
quick-start-substrate/: .gitignore  Cargo.toml  build.sh
quick-start-substrate/runtime/: Cargo.toml
quick-start-substrate/runtime/src/: game.rs  lib.rs  template.rs
quick-start-substrate/runtime_bak/: Cargo.toml
quick-start-substrate/runtime_bak/src/: lib.rs  template.rs
quick-start-substrate/src/: chain_spec.rs  cli.rs  main.rs  service.rs
zh/: Lesson 0.md  Lesson 1.md  Lesson 2.md
