[package]
name = "quick-start-substrate"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "quick-start-substrate"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
slog = "^2"
parity-codec = "3.0"
trie-root = "0.11.0"
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-cli = { git = "https://github.com/paritytech/substrate" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-service = { git = "https://github.com/paritytech/substrate" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
consensus = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate" }
substrate-client = {  git = "https://github.com/paritytech/substrate" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate" }
node-template-runtime = { path = "runtime" }
node-executor = { git = "https://github.com/paritytech/substrate" }
substrate-telemetry = { git = "https://github.com/paritytech/substrate" }

[build-dependencies]
vergen = "3"
