[package]
name = "node-template-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.1", default-features = false }
parity-codec-derive = { version = "3.1", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default_features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default_features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default_features = false }
fees = { package = "srml-fees", git = "https://github.com/paritytech/substrate", default_features = false }
consensus = { package = "srml-consensus", git = "https://github.com/paritytech/substrate", default_features = false }
aura = { package = "srml-aura", git = "https://github.com/paritytech/substrate", default_features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default_features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default_features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default_features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default_features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default_features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default_features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default_features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate", default_features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"primitives/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"fees/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"consensus-aura/std",
]
